--- a/source/layouts/_meta.slim
+++ b/source/layouts/_meta.slim
@@ -4,11 +4,11 @@ meta content="ie=edge" http-equiv="x-ua-compatible"
 meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"
 
 // Set dynamic and default meta
-- title = current_page.data.title || "Kaldi - Middleman + Netlify CMS Example"
-- description = current_page.data.description || "A simple example to get started with Middleman and Netlify CMS"
+- title = current_page.data.title || "Living with Less Plastic"
+- description = current_page.data.description || "Living with Less Plastic is an environmental advocacy group in New Westminster, BC"
 //Change this to your domain
-- url = "https://brave-hypatia-0b12fd.netlify.com"
-- image = current_page.data.image || "/images/uploads/homepage-hero.jpg"
+- url = "http://www.livingwithlessplastic.ca"
+- image = current_page.data.image || "/images/uploads/homepage-banner.jpg"
 
 title =title
 
